# ToyTrainCwk

./: .gitignore  .gitmodules  CMakeLists.txt
resources/: control_points.txt  train.mtl
shaders/: material.frag  material.vert  postProcess.frag  skybox.vert
src/: Camera.h  CatmullRom.cpp  CatmullRom.h  FPSCamera.cpp  FPSCamera.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Mesh2D.cpp  Mesh2D.h  Model.cpp  Model.h  Program.cpp  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  StaticCamera.h  Texture.h  Track.cpp  Track.h  Train.cpp  Train.h  Transform.cpp  Transform.h
